Switched to the MIT license

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A small module that generates an ISO 8601 timestamp including a zone",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Stuart Watt <stuart@morungos.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "jest": "^23.5.0"
   },
