--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "jest": "^23.5.0"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/morungos/timestamp-zoned.git"
+  },  
   "jest": {
     "moduleFileExtensions": [
       "js"
